--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio =  "1.21.0"
+axum = "0.5.16"
+axum-server = {version="0.4.2", features=["tls-rustls"]}
+tower-http = { version = "0.3.0", features = ["fs", "trace"] }
+mongodb = "2.3.0"
 
 [[bin]]
 name = "rust-server"
