--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 tokio =  "1.21.0"
 axum = "0.5.16"
-axum-server = {version="0.4.2", features=["tls-rustls"]}
-tower-http = { version = "0.3.0", features = ["fs", "trace"] }
-mongodb = "2.3.0"
+axum-server = { version="0.4.2", features=["tls-rustls"] }
+tower-http = { version="0.3.0", features=["fs", "trace"] }
+mongodb = "2.3.1"
+serde = "1.0.145"
+serde_json = "1.0.85"
 
 [[bin]]
 name = "rust-server"
